myteo/test/parser/comment/unterminated_block.exp
ERROR: test/parser/comment/unterminated_block.myte:1:2 Unexpected <EOF>
 1 | /*
   |   ^
